Fix #868 - Hide banner block when invisible

--- a/static/scss/partials/main.scss
+++ b/static/scss/partials/main.scss
@@ -1639,7 +1639,7 @@ input.input-has-error {
   transition: all 0.2s ease;
   opacity: 0;
   padding: 0;
-  min-height: 0;
+  max-height: 0;
 }
 
 .dashboard-banners.drop-shadow {
